<resources>
    <string name="app_name">轻庭</string>

    <string name="hello_world">Hello world!</string>
    <string name="action_settings">Settings</string>
    <string name="action_search">搜索</string>
    <string name="path_search">
       M141,17 A9,9 0 1,1 142,16 L149,23
    </string>


    <string name="bookmarks">书签</string>
    <string name="continue_read">继续阅读？</string>
    <string name="ok">OK</string>
    <string name="cancel">CANCEL</string>
    <string name="navigation_drawer_open">openDrawer</string>
    <string name="navigation_drawer_close">closeDrawer</string>

    <string name="volume_activity_label">卷目列表</string>
    <string name="chapter_activity_label">章节列表</string>

    <string name="bookshelf">书架</string>
    <string name="last_update">最近更新</string>
    <string name="anime_aera">新番专区</string>
    <string name="download_list">下载列表</string>
    <string name="setting">设置</string>
    <string name="about_us">关于与反馈</string>


    <string name="sp_bookmarks">me.ltype.lightniwa.BOOKMARS</string>

    <string-array name="tabs_name">
        <item name="my_book">我的</item>
        <item name="popular">人气</item>
    </string-array>

    <string-array name="anime_tabs_name">
        <item name="my_book">一月</item>
        <item name="popular">四月</item>
        <item name="popular">七月</item>
        <item name="popular">十月</item>
    </string-array>

    <string name="setting_font_size">setting_font_size</string>
    <string name="setting_line_spacing">setting_line_spacing</string>
    <string name="setting_screen_always">setting_screen_always</string>
    <string name="setting_night_model">setting_night_model</string>
    <string name="setting_auto_load_bookmark">setting_auto_load_bookmark</string>
    <string name="setting_check_version">setting_check_version</string>
    <string name="setting_clear_cache">setting_clear_cache</string>
    <string name="setting_clear_data">setting_clear_data</string>
    <string-array name="font_size_preference_key">
        <item>小</item>
        <item>普通</item>
        <item>大</item>
        <item>超大</item>
    </string-array>
    <string-array name="font_size_preference_value">
        <item>12</item>
        <item>16</item>
        <item>20</item>
        <item>24</item>
    </string-array>
    <string-array name="line_spacing_preference_key">
        <item>小</item>
        <item>普通</item>
        <item>大</item>
        <item>超大</item>
    </string-array>
    <string-array name="line_spacing_preference_value">
        <item>2</item>
        <item>4</item>
        <item>8</item>
        <item>12</item>
    </string-array>
</resources>
